Sync for Github; increased iteration from n to min 5

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 # OpenRouter API Configuration
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-TONGYI_MODEL=deepseek/deepseek-r1:free
+TONGYI_MODEL=alibaba/tongyi-deepresearch-30b-a3b
 
 # Brave Search API
 BRAVE_SEARCH_API_KEY=your_brave_search_api_key_here
@@ -23,3 +23,4 @@ FRONTEND_URL=http://localhost:3000
 # Logging
 LOG_LEVEL=INFO
 
+Supabase Password: "#63XZm^k*IlaABX4"
